erDiagram
    USER ||--o{ CUSTOMER : creates
    USER ||--o{ LEAD : creates_or_owns
    CUSTOMER ||--o{ CUSTOMER_PHONE : has
    CUSTOMER ||--o{ LEAD : has
    PRODUCT_CATEGORY o|--o{ PRODUCT : classifies
    PRODUCT o|--o{ LEAD : interests
    LEAD ||--o{ LEAD_ASSIGNMENT_HISTORY : records
    USER ||--o{ LEAD_ASSIGNMENT_HISTORY : changes
    LEAD ||--o{ INTERACTION : has
    USER ||--o{ INTERACTION : records
    CUSTOMER ||--o{ INTERACTION : concerns
    LEAD ||--o{ SALE : produces
    CUSTOMER ||--o{ SALE : buys
    PRODUCT o|--o{ SALE : snapshots
    USER ||--o{ SALE : sells
    CUSTOMER ||--o{ SALES_DOCUMENT : owns
    SALE o|--o{ SALES_DOCUMENT : references
    USER ||--o{ SALES_DOCUMENT : registers
    SALES_DOCUMENT ||--o{ POSTAL_STATUS_HISTORY : records
    USER ||--o{ POSTAL_STATUS_HISTORY : changes
    CUSTOMER ||--o{ AFTER_SALES_REQUEST : owns
    SALE o|--o{ AFTER_SALES_REQUEST : references
    SALES_DOCUMENT o|--o{ AFTER_SALES_REQUEST : references
    USER o|--o{ AFTER_SALES_REQUEST : assigned_or_creates
    AFTER_SALES_REQUEST ||--o{ AFTER_SALES_HISTORY : records
    USER ||--o{ AFTER_SALES_HISTORY : changes
    USER o|--o{ ACTIVITY_LOG : acts
    CUSTOMER o|--o{ INBOUND_SMS : deterministically_matches
    LEAD o|--o{ INBOUND_SMS : deterministically_matches
